<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="humg.buiket.facebook.SettingActivity">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/setting_txtThietlap"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/thietlap" />

        <Switch
            android:id="@+id/setting_swLanguage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/sw"
            android:textOff="Viet Nam"
            android:textOn="English"
            tools:ignore="HardcodedText" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto" />

        <Button
            android:id="@+id/setting_btnApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
